force-app/main/default/objects/Physician__c/Physician__c.object-meta.xml
<CustomObject>
    <label>Physician</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>PID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>