force-app/main/default/objects/Physician__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Physicians</relationshipName>
    <type>Lookup</type>
</CustomField>