force-app/main/default/objects/Physician__c/fields/Show_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Show_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Calendar</label>
    <type>Checkbox</type>
</CustomField>