force-app/main/default/objects/Physician__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization Name</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Physicians</relationshipLabel>
    <relationshipName>Physicians</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>