force-app/main/default/objects/Physician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Physician__c</columns>
    <columns>Specialization__c</columns>
    <columns>Degree__c</columns>
    <columns>Show_Calendar__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>